Comprehensive code review fixes, tests, docs, and admin console improvements
README:
- Fix Mermaid diagram (pipe chars, unicode arrows, slash paths)
- Add Admin Console, gRPC, Kubernetes to tech stack and architecture
- Add missing directories to project structure
- Fix curl examples to use tenantSlug and camelCase response fields
- Update compensation tradeoff to reflect best-effort continues-on-failure
- Remove false MIT license claim
- Remove internal planning docs (~25k lines)

Security fixes (all services):
- Fix cross-tenant login: add tenantSlug to LoginRequest, scope user lookup
- Fix cross-tenant API key generation and role permission assignment
- Clear SecurityContext in finally blocks (all JwtAuthenticationFilter + ApiKeyAuthenticationFilter)
- Use constant-time comparison for internal API key validation
- Block disabled users and suspended tenants from authenticating
- Add refresh token family revocation on reuse detection
- Bound API key cache to 10k entries
- Add jti/iss claims to JWT, validate issuer on parse
- Scope GET /tenants/{id} to caller's own tenant
- Remove unused cross-tenant findByEmail, JWKS URI for HS256

Reliability fixes:
- Outbox: SELECT FOR UPDATE SKIP LOCKED, per-event transactions
- Compensation: best-effort continues on failure instead of stopping
- Dead-letter replay: reset attemptCount, transition execution FAILED->RUNNING
- StepResultProcessor: respect non_retryable flag from step results
- TimeoutDetector: catch OptimisticLockException, add pagination
- Worker: wire Kafka concurrency, add lease renewal, handle publish failures
- Worker: pause Kafka consumer during graceful shutdown
- Audit: noRollbackFor on idempotent insert, poison-pill handling, defaults for nullable fields

Infrastructure:
- Add .dockerignore, bind infra ports to 127.0.0.1
- K8s: add startupProbe, SPRING_PROFILES_ACTIVE, align Kafka/Redis versions
- CI: BuildKit cache sharing for Docker builds
- Config: health details when-authorized, 10% trace sampling, bou